--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -28,6 +28,7 @@
       FHIR.oauth2.authorize({
         'client_id': '86f6bf5f-eded-4930-8225-93b1d08e7e10',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'redirectUri': 'index.html'
       });
     </script>
     <div class="spinner">
